--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/lycoris0731/panzer4reservation/issues"
   },
-  "homepage": "https://github.com/lycoris0731/panzer4reservation#readme"
+  "homepage": "https://github.com/lycoris0731/panzer4reservation#readme",
+  "dependencies": {
+    "casperjs": "^1.1.1"
+  }
 }
